Introduction of Model module and its submodules
1. Introduction of Rest module and its Retrofit submodule

2. Introduction of Database module and its Room and RoomRx submodules

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,9 @@
 include ':kit'
 rootProject.name='mvp'
 include ':core'
-include ':rest'
+include ':model-rest-retrofit'
+include ':model-rest'
+include ':model'
+include ':model-database-room'
+include ':model-database-room-rx'
+include ':model-database'
