Fixing presentation layer

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-include ':kit'
 rootProject.name='mvp'
 include ':core'
 include ':model-rest-retrofit'
@@ -7,3 +6,7 @@ include ':model'
 include ':model-database-room'
 include ':model-database-room-rx'
 include ':model-database'
+include ':presentation'
+include ':model-lists'
+include ':presentation-lists'
+include ':presntation-lists-rx'
