--- a/model-database/build.gradle
+++ b/model-database/build.gradle
@@ -23,6 +23,19 @@ android {
         }
     }
 
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/app_release.kotlin_module'
+    }
+
 }
 
 dependencies {
