--- a/core/build.gradle
+++ b/core/build.gradle
@@ -34,6 +34,7 @@ android {
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/app_release.kotlin_module'
+        exclude 'META-INF/core_release.kotlin_module'
     }
 
 }
